# trajaudit

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROJECT_STATE.md  architecture.md  auto_session_questions.md  exploit-taxonomy.md  followups.md  malt_recon.md  reading_notes.md  related-work.md  spec.md  status_report.md  v01_first_run.md  writing_a_monitor.md
examples/: README.md
src/monitorstress/: __init__.py  cli.py  report.py
src/monitorstress/adapters/: __init__.py  malt.py
src/monitorstress/benchmarks/: __init__.py  base.py  swe_bench.py  terminal_bench.py
src/monitorstress/core/: __init__.py  events.py  runner.py  trajectory.py  verdict.py
src/monitorstress/layer1_workspace/: __init__.py  sandbox.py
src/monitorstress/layer2_syntactic/: __init__.py  ast_scanner.py  code_extractor.py  exploit_signatures.py
src/monitorstress/layer3_semantic/: __init__.py  escalation.py  judge.py  prompts.py
src/monitorstress/monitors/: __init__.py  metr_prompt.py
src/monitorstress/reporting/: __init__.py  exporters.py  leaderboard.py
src/monitorstress/transformations/: __init__.py  structural.py
src/trajaudit/: __init__.py  cli.py
src/trajaudit/adapters/: __init__.py  malt.py
src/trajaudit/benchmarks/: __init__.py  base.py  swe_bench.py  terminal_bench.py
src/trajaudit/core/: __init__.py  events.py  runner.py  trajectory.py  verdict.py
src/trajaudit/layer1_workspace/: __init__.py  fs_differ.py  process_tracer.py
src/trajaudit/layer2_syntactic/: __init__.py  ast_scanner.py  code_extractor.py  exploit_signatures.py
src/trajaudit/monitors/: __init__.py  (+1 more)
tests/: test_cli.py  test_report.py  test_smoke.py
tests/adapters/: test_malt.py
tests/core/: test_events.py  test_verdict.py
tests/monitors/: test_metr_prompt.py
tests/transformations/: conftest.py  test_drop_reasoning.py  test_pad_with_noops.py  test_truncate_observations.py
(+23 files in other folders)
