[project]
name = "trajaudit"
version = "0.0.1"
description = "Multi-layer audit framework for agent benchmark integrity"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tianyi Zhang" }]
requires-python = ">=3.11"
keywords = [
    "llm",
    "agent",
    "benchmark",
    "evaluation",
    "reward-hacking",
    "audit",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.6,<3",
    "typer>=0.12,<1",
    "anthropic>=0.40,<1",
    "openai>=1.50,<3",
    "docker>=7.1,<8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<7",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
trajaudit = "trajaudit.cli:app"

[project.urls]
Homepage = "https://github.com/tianyi-zhang-02/trajaudit"
Issues = "https://github.com/tianyi-zhang-02/trajaudit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trajaudit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src/trajaudit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/trajaudit"]
branch = true

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<7",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
]
